update gradle moven version

--- a/targetclick/build.gradle
+++ b/targetclick/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin'
     id'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id 'com.github.dcendents.android-maven'
+
 }
 group='com.github.softwarekk' //添加列
 
